# hive_fork

./: .pr-2098.md  .pr-2111.md  .pr-2309.md  .pr-2392.md  .pr-2505.md  .pr-2531.md  .pr-2536.md  .pr-2544.md  .pr-2553.md  .pr-2579.md  .pr-2583.md  .pr-2600.md  .pr-2664.md  .pr-2695.md  .pr-2724.md  .pr-2731.md  .pr-2843.md  .pr-2880.md  .pr-2888.md  .pr-2891.md  .pr-2967.md  .pr-2976.md  .pr-2989.md  .pr-3009.md  .pr-3043.md  .pr-3085.md  .pr-3096.md  .pr-3129.md  .pr-3140.md  .pr-3141.md  .pr-3146.md  .pr-3155.md  .pr-3371.md  .pr-3551.md  .pr-3553.md  .pr-3596.md  .pr-3618.md  .pr-3657.md  .pr-3663.md  .pr-3673.md  (+294 more)
core/: .mcp.json  .pr-3958.md  README.md  architect_agent.py  codex_oauth.py  pyproject.toml  requirements.txt  server.py  test_gemini_models.py  test_llm_fix.py  test_llm_raw.py  test_llm_variants.py  verify_anthropic.py  verify_gemini.py  verify_gemini_pro.py
core/builds/: build_20260205_110752.json
core/compiler/: scheduler.py  schemas.py  transformer.py
core/demos/: github_outreach_demo.py
core/examples/templates/: README.md  iterative_pdf_processor.py  regulatory_compliance_agent.py  research_summarization_agent.py
core/framework/: __init__.py  agent_registry.py  audit_cli.py  cli.py  config.py  debug_protocol.py
core/framework/adaptiveness/: feedback_store.py
core/framework/agents/: memory_extractor.py  worker_memory.py
core/framework/api/: __init__.py  models.py  server.py
core/framework/compiler/: __init__.py  ir.py  resolver.py  transformer.py  validation.py
core/framework/costs/: __init__.py  calculator.py  cli.py
core/framework/credentials/: __init__.py  models.py  setup.py  storage.py  store.py  validation.py
core/framework/doctor/: __init__.py  checks.py  cli.py
core/framework/evolution/: __init__.py  archive.py  config.py  fitness.py  mutation.py  pipeline.py  population.py  selection.py  shadow.py  vectors.py
core/framework/governance/: README.md  __init__.py  audit.py  config.py  engine.py  permissions.py  risk.py
core/framework/graph/: __init__.py  analyzer.py  (+20 more)
core/frontend/: README.md  package-lock.json  package.json
core/tests/: conftest.py  test_agent_health.py  test_agent_invoke.py  test_agent_invoke_node.py  test_agent_prompts.py  test_agent_registry.py  test_agent_runtime_stream.py  test_audit_trail.py  test_breakpoint_approval.py  test_calibration.py  test_checkpoint_recovery.py  test_circuit_breaker.py  test_cli_demo.py  test_cli_entry_point.py  test_compiler_transformer.py  test_conditional_edge_direct_key.py  test_config.py  test_conversation_judge.py  test_conversation_store.py  test_cost_metrics.py  test_credentials_exports.py  test_cycle_detection.py  test_declarative_tools.py  test_degradation_policy.py  test_doctor.py  test_doctor_cli.py  test_durable_execution.py  test_event_bus_deadlock.py  test_event_loop_integration.py  test_event_loop_node.py  test_event_type_extension.py  test_evolution_archive.py  test_evolution_selection.py  test_evolution_vectors.py  test_execution_stream_feature.py  test_execution_trace.py  test_executor_retry_backoff.py  test_failure_conditions.py  test_fanout.py  test_goal_evaluation.py  (+57 more)
(+742 files in other folders)
