[project]
name = "framework"
version = "0.7.1"
description = "Goal-driven agent runtime with Builder-friendly observability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "pydantic>=2.0", "anthropic>=0.40.0", "httpx>=0.27.0", "litellm>=1.81.0", "mcp>=1.0.0", "fastmcp>=2.0.0", "croniter>=1.4.0", "tools", "fastapi>=0.110.0", "uvicorn[standard]>=0.27.0", "python-multipart>=0.0.9",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [ "ty>=0.0.13", "ruff>=0.14.14", "pytest>=8.0", "pytest-asyncio>=0.23", "pytest-xdist>=3.0",]

[project.optional-dependencies]
webhook = [ "aiohttp>=3.9.0",]
server = [ "aiohttp>=3.9.0",]
testing = [ "pytest>=8.0", "pytest-asyncio>=0.23", "pytest-xdist>=3.0",]

[project.scripts]
hive = "framework.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [ "B", "C4", "E", "F", "I", "Q", "UP", "W",]

[tool.pytest.ini_options]
filterwarnings = [ "ignore::DeprecationWarning:litellm.*",]

[tool.uv.sources.tools]
workspace = true

[tool.ruff.lint.per-file-ignores]
"demos/*" = [ "E501",]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [ "framework",]
section-order = [ "future", "standard-library", "third-party", "first-party", "local-folder",]

[tool.hatch.build.targets.wheel]
packages = [ "framework",]
